--- a/Index.html
+++ b/Index.html
@@ -6,17 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAVLON BABY WIPES</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <h1>Savlon</h1>
-        <h3>BABY WIPES</h3>
-    </div>
-    <div>
-        <img src="photos/SAVLON-BABY-WIPES-80-PCS.png" alt="">
-    </div>
+    <section class="itro-section">
+        <div>
+            <h1>Savlon</h1>
+            <h3>BABY WIPES</h3>
+        </div>
+        <div>
+            <div>
+                <img src="photos/green-leaf.png" alt="green-leaf">
+            </div>
+            <div>
+                <h4>ANTI</h4>
+                <h4>BACTERIAL</h4>
+            </div>
+        </div>
+        <div>
+            <img src="photos/SAVLON-BABY-WIPES-80-PCS.png" alt="SAVLON-BABY-WIPES">
+        </div>
+    </section>
     <div></div>
 </body>
 
