--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAVLON BABY WIPES</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         </div>
         <div>
             <div>
-                <img src="photos/green-leaf.png" alt="green-leaf">
+                <img class="logo" src="photos/green-leaf.png" alt="green-leaf">
             </div>
             <div>
                 <h4>ANTI</h4>
