--- a/Index.html
+++ b/Index.html
@@ -10,14 +10,22 @@
 </head>
 
 <body>
+    <section>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Product</a>
+            <a href="">Contact us</a>
+            <a href=""></a>
+        </nav>
+    </section>
     <section class="itro-section">
         <div>
             <h1>Savlon</h1>
-            <h3>BABY WIPES</h3>
+            <h3 class="sub-titel">BABY WIPES</h3>
         </div>
         <div>
-            <div>
-                <img class="logo" src="photos/green-leaf.png" alt="green-leaf">
+            <div class="logo">
+                <img src="photos/green-leaf.png" alt="green-leaf">
             </div>
             <div>
                 <h4>ANTI</h4>
